--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
     "require": {
         "symfony/symfony": "^4|^5",
         "pimcore/pimcore": "^10.0",
-        "dachcom-digital/dynamic-search": "dev-develop"
+        "dachcom-digital/dynamic-search": "dev-pimcore-x"
     },
     "require-dev": {
         "codeception/codeception": "~2.4.0",
